_sass/main.scss
body {
	padding: 0;
	margin: 0;
	height: 100%;
	background: black;
}

nav.links {
	a:link, a:visited {
		color: white;
		text-decoration: none;
	}

	a:hover {
		color: black;
	}
	
	color: white;
	font-size: 26px;
	font-family: "Tex Gyre Adventor", Helvetica, sans-serif;
	font-weight: bold;
		
	a {
		display: block;
		text-decoration: none;
		padding-top: 10px;
		padding-left: 76.5%;
	}
}

div.wrapper {
	display: flex;
}

div.side-div {
	a.avatar {
		padding-left: 75%;
	}

	background: black;
	color: white;
	width: 30%;
}

div.nav-wrapper {
	height: 100%;
	width: 100%;
}

div.side-div img {
	height: 100px;
	width: 100px;
	border-radius: 50%;
}

div.centre-div {
	h1 {
		font: 30px "Tex Gyre Adventor", Helvetica, sans-serif;
		font-weight: bold;
	}
	p {
		font: 18px "Helvetica Neue", Helvetica, sans-serif;
	}
	flex: 1;
	background: white;
	color: black;
	width: 70%;
	padding: 10px;
	padding-left: 25px;
}

div.foot-wrapper {
	div.foot-icons {
		a {
			padding: 5px;
		}
		padding-left: 50%;
		padding-top: 12px;
	}

	div.foot-pledge p {
		margin: 0.75px;
		padding-left: 50%;
		font-size: 12px;
		color: grey;
	}

	width: 100%;
	height: 5%;
}

